@@ -1,3 +1,8 @@
+ORCJAVA-518
+===========
+
+ - Improve RemoteProxy polling mechanism (Rainer Hitz) 
+
 ORCJAVA-478
 ===========
 
